Allow to pass optional flags to resource template
modified:   api/openapi-spec/swagger.json
modified:   cmd/argoexec/commands/resource.go
modified:   pkg/apis/api-rules/violation_exceptions.list
modified:   pkg/apis/workflow/v1alpha1/generated.pb.go
modified:   pkg/apis/workflow/v1alpha1/generated.proto
modified:   pkg/apis/workflow/v1alpha1/openapi_generated.go
modified:   pkg/apis/workflow/v1alpha1/workflow_types.go
modified:   pkg/apis/workflow/v1alpha1/zz_generated.deepcopy.go
modified:   workflow/executor/resource.go
